# YAYMA

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.agents/: AGENTS.md
.cargo/: config.toml
.github/workflows/: build.yml  debug.yml  publish.yml
frontend/: analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
frontend/android/app/: build.gradle.kts  proguard-rules.pro
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: main.dart  tool_test.dart
frontend/lib/src/app/: init.dart  system_tray.dart
frontend/lib/src/providers/: audio_handler.dart  auth_provider.dart  home_provider.dart  library_provider.dart  lyrics_provider.dart  navigation_provider.dart  notification_provider.dart  playback_provider.dart  search_provider.dart  wave_provider.dart
frontend/lib/src/rust/: lib.dart
frontend/lib/src/rust/app/: context.dart
frontend/lib/src/rust/audio/: signals.dart  system.dart
frontend/lib/src/ui/: add_to_playlist_dialog.dart  album_view.dart  artist_view.dart  home_view.dart  layout.dart  library_view.dart  playlist_view.dart  search_view.dart  settings_view.dart  wave_view.dart  yandex_id_view.dart
frontend/lib/src/ui/auth/: auth_screens.dart
frontend/lib/src/ui/layout/: background.dart  navigation_bar.dart  player_bar.dart
frontend/lib/src/ui/widgets/: common_ui.dart  (+11 more)
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/rust_builder/: pubspec.yaml
frontend/rust_builder/android/: build.gradle
frontend/rust_builder/ios/: rust_lib_frontend.podspec
frontend/rust_builder/linux/: CMakeLists.txt
frontend/rust_builder/macos/: rust_lib_frontend.podspec
frontend/rust_builder/windows/: CMakeLists.txt
frontend/shaders/: vibe.frag
frontend/windows/: CMakeLists.txt
frontend/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/windows/runner/: flutter_window.cpp  main.cpp
packaging/aur/yayma-bin/: PKGBUILD.template
packaging/linux/: io.github.darkplayoff.yayma.desktop
src/: flutter_rust_bridge.yaml  lib.rs  pubspec.yaml
src/android/app/: build.gradle.kts
src/api/: auth.rs  content.rs  library.rs  models.rs  playback.rs  simple.rs
src/app/: context.rs  init.rs  mod.rs  session.rs  settings.rs  workers.rs
src/app/logic/: audio_fx.rs  auth.rs  content.rs  library.rs  mod.rs  playback.rs  simple.rs
src/audio/: cache.rs  commands.rs  controller.rs  discord.rs  liked.rs  mod.rs  monitor.rs  playback.rs  progress.rs  queue.rs  signals.rs  smtc.rs  stream_manager.rs  system.rs  thumbnail.rs  util.rs  vibe.rs  yandex.rs
src/audio/fx/: chain.rs  delay.rs  init.rs  mod.rs
src/audio/fx/modules/: mod.rs  overdrive.rs
src/auth/: mod.rs  token.rs
src/hook/: build.dart
src/http/: mod.rs
src/lib/: main.dart
src/lib/src/app/: init.dart  system_tray.dart
src/lib/src/providers/: audio_handler.dart  auth_provider.dart  library_provider.dart  notification_provider.dart  playback_provider.dart  search_provider.dart
src/lib/src/rust/: http.dart
src/lib/src/ui/: add_to_playlist_dialog.dart  album_view.dart  artist_view.dart  home_view.dart  layout.dart  library_view.dart  playlist_view.dart  search_view.dart  settings_view.dart
src/linux/: CMakeLists.txt
src/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
src/macos/Flutter/: GeneratedPluginRegistrant.swift
src/rust/: Cargo.toml  build.rs  rust-toolchain.toml
src/rust/src/: lib.rs
src/rust/src/api/: audio_fx.rs  content.rs  mod.rs  models.rs  simple.rs  updates.rs
src/rust/src/app/: context.rs  init.rs  mod.rs  session.rs  settings.rs  workers.rs
src/rust/src/app/logic/: audio_fx.rs  auth.rs  content.rs  library.rs  mod.rs  playback.rs  simple.rs  updates.rs
src/rust/src/audio/: cache.rs  commands.rs  controller.rs  events.rs  fetcher.rs  history.rs  liked.rs  mod.rs  monitor.rs  prefetcher.rs  queue.rs  shuffle.rs  smtc.rs  state.rs  stream_manager.rs  system.rs  thumbnail.rs  util.rs  vibe.rs
src/rust/src/audio/fx/: chain.rs  init.rs  param.rs
src/rust/src/audio/fx/modules/: mod.rs  monitor.rs  reverb.rs
src/rust/src/auth/: token.rs
src/rust/src/http/: file_info.rs  mod.rs
src/rust/src/storage/: cache.rs  db.rs
src/rust/src/stream/: buffer.rs  data_source.rs  pcm.rs
src/rust/src/util/: flac.rs  hook.rs  log.rs  reactive.rs  track.rs
src/shaders/: vibe.frag
src/storage/: cache.rs  db.rs  mod.rs  models.rs
src/stream/: buffer.rs  data_source.rs  pcm.rs
src/util/: db_helper.rs  flac.rs  log.rs  mod.rs  reactive.rs  task.rs
src/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
src/windows/runner/: Runner.rc
(+63 files in other folders)
