[package]
name = "yayma"
edition = "2024"
version = "0.1.0"

[lib]
name = "yayma"
crate-type = ["cdylib", "staticlib"]

[dependencies]

mimalloc = { version = "*", features = ["v3"] }

# Core 
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "brotli",
  "json",
  "http2",
  "multipart",
] }

# Audio
symphonia = { version = "0.5.4", default-features = false}
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-aac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-simd",
  "tracing",
  "crossbeam-channel",
] }

yandex-music = "0.6.0"
chrono = { version = "0.4.44", features = ["serde"] }
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.228", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
directories = "6.0.0"

# Utilities
flume = "0.12.0"
rand = "0.9.4"
crossbeam-channel = "0.5.15"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures = "0.3.32"
serde_json = "1.0.149"

im = "15.1.0"
arc-swap = "1.7.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }

souvlaki = "0.8.3"
parking_lot = "0.12.5"
foldhash = "0.2.0"
urlencoding = "2.1.3"
lofty = "0.24.0"
discord-rich-presence = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Com", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_System_Threading", "Win32_Graphics_Imaging", "Win32_System_Memory"] }

[workspace]
members = ["."]

[workspace.dependencies]
keyring = "3.6.3"

[target.'cfg(target_os = "linux")'.dependencies.keyring]
workspace = true
features = [
  "linux-native",
  "linux-native-sync-persistent",
  "sync-secret-service",
  "crypto-rust",
]

[target.'cfg(target_os = "macos")'.dependencies.keyring]
workspace = true
features = ["apple-native", "crypto-rust"]

[target.'cfg(target_os = "windows")'.dependencies.keyring]
workspace = true
features = ["windows-native", "crypto-rust"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
