[package]
name = "yayma"
edition = "2024"
version = "0.1.0"

[lib]
name = "yayma"
crate-type = ["cdylib", "staticlib"]

[dependencies]

mimalloc = { version = "*", features = ["v3"] }

# Core 
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls",
  "brotli",
  "json",
  "http2",
  "multipart",
] }

# Audio
symphonia = { version = "0.5.5", default-features = false}
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-aac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-simd",
  "tracing",
  "crossbeam-channel",
] }

yandex-music = "0.7.0"
chrono = { version = "0.4.44", features = ["serde"] }
flutter_rust_bridge = { version = "=2.13.0-beta.5" }
serde = { version = "1.0.228", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
directories = "6.0.0"

# Utilities
flume = "0.12.0"
rand = "0.9.4"
crossbeam-channel = "0.5.15"
thiserror = "2.0.18"
futures = "0.3.32"
serde_json = "1.0.149"

im = "15.1.0"
arc-swap = "1.9.1"
toasty = { version = "0.7", features = ["sqlite"] }


parking_lot = "0.12.5"
foldhash = "0.2.0"
urlencoding = "2.1.3"
lofty = "0.24.0"
bytes = "1.11.1"
[target.'cfg(not(target_os = "android"))'.dependencies]
discord-rich-presence = "1.1.0"
souvlaki = "0.8.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Graphics_Imaging",
    "Win32_Media_Audio",
] }

[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = { version = "0.7.0", features = ["jni"] }
jni = "0.22"
ndk-context = "0.1.1"
mimalloc = { workspace = true, features = ["local_dynamic_tls"] }

[workspace]
members = ["."]

[workspace.dependencies]
mimalloc = { version = "*" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
